[code] ~ Merged the doxygen process output and error streams.